2009-03-19  Sanel <karijes@users.sourceforge.net>

	* edelib/Window.h:
	* src/Window.cpp:
	* edelib/WindowXid.h:
	* src/WindowXid.cpp: window_xid_create() moved to WindowXid.{h,cpp} for
	easier maintenance

2009-03-17  Sanel <karijes@users.sourceforge.net>

	* src/IconTheme.cpp: spec said $XDG_DATA_HOME/icons should be used too
	* edelib/IconLoader.h: some documentation update

2009-03-16  Sanel <karijes@users.sourceforge.net>

	* edelib/IconTheme.h:
	* src/IconTheme.cpp: new code, new design, improved icon searching
	* edelib/IconLoader.h:
	* src/IconLoader.cpp: now this class actually loads icons, cache them and
	displays inside widgets
	* src/Window.cpp:
	* src/IconChooser.cpp:
	* test/xdg/icon-theme.cpp: updated because of these chages

2009-03-10  Sanel <karijes@users.sourceforge.net>

	* edelib/Pty.h:
	* edelib/PtyProcess.h: added EDELIB_API exporter
	* edelib/DirWatch.h: a little documentation revision

2009-03-09  Sanel <karijes@users.sourceforge.net>

	* src/xdgmime:
	* src/Jamfile
	* src/Jamfile
	* configure.in:
	* Jamconfig.in: updated xdgmime sources to the latest versions and changed
	accompanying files to reflect that
	* test/mime.cpp: added tests for caveats

2009-03-08  Sanel <karijes@users.sourceforge.net>

	* src/MessageBox.cpp: dumped DO_COPY() macro in a favor of edelib_strlcpy()

2009-03-07  Sanel <karijes@users.sourceforge.net>

	* edelib/EdbusConnection.h: fixed a typo in enum name
	* edelib/EdbusConnection.h:
	* src/EdbusConnection.cpp: request_name() now follows policy issued with
	second 'mode' parameter
	* edelib/EdbusConnection.h: request_name() documentation update
	* edelib/DesktopFile.h: todo about Exec special variables
	* edelib/EdbusMessage.h: documentation fix
	* src/MessageBox.cpp: do not call fl_register_images()

2009-03-06  Sanel <karijes@users.sourceforge.net>

	* test/string.cpp: removed unneeded stdio.h inclusion
	* test/run.cpp: added tests for run_XXX functions
	* edelib/Run.h: document some caveats