@@ -229,61 +229,3 @@ const char* IconLoader::get_fallback_icon(void) {
 }
 
 EDELIB_NS_END
-
-using namespace edelib;
-
-void change_cb(Fl_Widget*, void* win_) {
-	IconLoader::reload("edeneu");
-	Fl_Window* win = (Fl_Window*)win_;
-	win->redraw();
-}
-
-int main() {
-#if 0
-	IconLoader il;
-
-	printf(">>> %s\n", il.get_icon_path("empty", ICON_SIZE_MEDIUM));
-	printf(">>> %s\n", il.get_icon_path("empty", ICON_SIZE_MEDIUM));
-	printf(">>> %s\n", il.get_icon_path("autopackage-installer", ICON_SIZE_LARGE));
-	//IconTheme::shutdown();
-	//IconTheme::init("gnome");
-	il.reload_icons();
-	printf(">>> %s\n", il.get_icon_path("autopackage-installer", ICON_SIZE_LARGE));
-	printf(">>> %s\n", il.get_icon_path("empty", ICON_SIZE_LARGE));
-#endif
-
-#if 0
-	IconTheme it;
-	it.load("edeneu");
-	printf(">> %s\n", it.find_icon("serviceconf", ICON_SIZE_MEDIUM).c_str());
-	it.load("gnome");
-	printf(">> %s\n", it.find_icon("serviceconf", ICON_SIZE_MEDIUM).c_str());
-	printf("|%s| |%s| |%s|\n", it.stylized_theme_name(), it.description(), it.example_icon());
-
-	list<String> lst;
-	it.query_icons(lst, ICON_SIZE_MEDIUM);
-	list<String>::iterator iter = lst.begin(), it_end = lst.end();
-
-	while(iter != it_end) {
-		printf("=> %s\n", (*iter).c_str());
-		++iter;
-	}
-#endif
-
-	fl_register_images();
-	IconLoader::init("edeneu");
-	Fl_Window* win = new Fl_Window(400, 400, "Some window");	
-	win->begin();
-		Fl_Box* bb = new Fl_Box(0, 0, 400, 100);
-		IconLoader::set(bb, "utilities-terminal", ICON_SIZE_LARGE);
-		Fl_Button* button = new Fl_Button(50, 200, 90, 25, "Click me");
-		button->callback(change_cb, win);
-	win->end();
-	win->show();
-	Fl::run();
-	IconLoader::shutdown();
-
-	return 0;
-}
-
-
